tarpc/tests/compile_fail/tokio/must_use_server_executor.stderr
error: unused `TokioServerExecutor` that must be used
  --> tests/compile_fail/tokio/must_use_server_executor.rs:28:9
   |
28 |         server.execute(HelloServer.serve());
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> tests/compile_fail/tokio/must_use_server_executor.rs:26:12
   |
26 |     #[deny(unused_must_use)]
   |            ^^^^^^^^^^^^^^^
